--- a/Baroque.html
+++ b/Baroque.html
@@ -411,6 +411,6 @@
 
     <!--JS-->
     <script src="Scripts/Navbar.js"></script>
-    <script src="Scripts/modals.js"></script>
+    <script src="Scripts/Modals.js"></script>
 </body>
 </html>
