--- a/Classicicsm.html
+++ b/Classicicsm.html
@@ -417,6 +417,6 @@
 
     <!--JS-->
     <script src="Scripts/Navbar.js"></script>
-    <script src="Scripts/modals.js"></script>
+    <script src="Scripts/Modals.js"></script>
 </body>
 </html>
